bug on safari fix

--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ content {
 }
 .arg-img {
     width: 400px;
+    object-fit: contain;
 }
 
 .lorem-container {
@@ -129,12 +130,12 @@ footer > div > p > a {
     }
     .img-container {
         width: 100%;
-        height: 100%;
+        height: 40vh;
         justify-content: center;
-        background-color: #75aee0;
+        background-color:#0070d3;
     }
     .arg-img{
-        width: 50%;
+        width: 80%;
     }
     .lorem-container{
         width: 100%;
